# spring23-community-camerontredoux

./: README.md  counter.py  julia_matrix.ipynb  presentation.md  proposal.md  streamlit.py
benchmark/: Cargo.toml  Julia_bench.ipynb  README.md  build.rs
benchmark/data/: c64.md  f64.md
benchmark/julia/: lu.ipynb  matmul.ipynb  qr.ipynb  svd.ipynb
benchmark/markdown/: c32.md  c64.md  f32.md  f64.md
benchmark/src/: cholesky.rs  gemm.rs  main.rs  no_piv_qr.rs  partial_piv_lu.rs  svd.rs  trsm.rs  types.rs
data/: c32matrix.csv  c32triangularInv.csv  c32triangularSol.csv  c64LUdecomposition.csv  c64SVD.csv  c64cholesky.csv  c64matrix.csv  c64qr.csv  c64triangularInv.csv  c64triangularSol.csv  f32matrix.csv  f32triangularInv.csv  f32triangularSol.csv  f64LUdecomposition.csv  f64SVD.csv  f64cholesky.csv  f64matrix.csv  f64qr.csv  f64triangularInv.csv  f64triangularSol.csv
nalgebra_test/: .gitignore  Cargo.toml
nalgebra_test/benches/: matrix_multiply.rs
nalgebra_test/src/: main.rs
