[package]
name = "nalgebra_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
nalgebra = "0.32.2"

[[bench]]
name = "matrix_multiply"
harness = false
